// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPatch (1)  1`] = `
"@@ -6,16 +6,17 @@
  ipsum d
+o
 lor sit 
"
`;

exports[`createPermlink (1)  1`] = `"lorem-ipsum-dolor-sit-amet"`;

exports[`createPermlink non-latin chars (1)  1`] = `"f38c58113ff7e"`;

exports[`createPermlink random (1)  1`] = `"lorem-ipsum-dolor-sit-amet-f38c58113ff7e"`;

exports[`createReplyPermlink (1)  1`] = `"re-good-karma-2018921t120500z"`;

exports[`extractMetadata (1)  1`] = `
Object {
  "image": Array [
    "http://www.xx.com/a.png",
  ],
  "thumbnails": Array [
    "http://www.xx.com/a.png",
  ],
}
`;

exports[`extractMetadata (2)  1`] = `
Object {
  "image": Array [
    "http://www.xx.com/a.png",
    "https://img.esteem.ws/h74zrad2fh.jpg",
  ],
  "thumbnails": Array [
    "http://www.xx.com/a.png",
    "https://img.esteem.ws/h74zrad2fh.jpg",
  ],
}
`;

exports[`makeCommentOptions (1) Default 50% / 50% 1`] = `
Object {
  "allow_curation_rewards": true,
  "allow_votes": true,
  "author": "talhasch",
  "extensions": Array [],
  "max_accepted_payout": "1000000.000 HBD",
  "percent_hbd": 10000,
  "permlink": "lorem-ipsum-1",
}
`;

exports[`makeCommentOptions (2) Power Up 100% 1`] = `
Object {
  "allow_curation_rewards": true,
  "allow_votes": true,
  "author": "talhasch",
  "extensions": Array [],
  "max_accepted_payout": "1000000.000 HBD",
  "percent_hbd": 0,
  "permlink": "lorem-ipsum-1",
}
`;

exports[`makeCommentOptions (3) Decline Payout 1`] = `
Object {
  "allow_curation_rewards": true,
  "allow_votes": true,
  "author": "talhasch",
  "extensions": Array [],
  "max_accepted_payout": "0.000 HBD",
  "percent_hbd": 10000,
  "permlink": "lorem-ipsum-1",
}
`;

exports[`makeCommentOptions (4) Empty beneficiary list 1`] = `
Object {
  "allow_curation_rewards": true,
  "allow_votes": true,
  "author": "talhasch",
  "extensions": Array [],
  "max_accepted_payout": "1000000.000 HBD",
  "percent_hbd": 10000,
  "permlink": "lorem-ipsum-1",
}
`;

exports[`makeCommentOptions (5) With beneficiary list 1`] = `
Object {
  "allow_curation_rewards": true,
  "allow_votes": true,
  "author": "talhasch",
  "extensions": Array [
    Array [
      0,
      Object {
        "beneficiaries": Array [
          Object {
            "account": "bar",
            "weight": 200,
          },
          Object {
            "account": "foo",
            "weight": 300,
          },
        ],
      },
    ],
  ],
  "max_accepted_payout": "1000000.000 HBD",
  "percent_hbd": 10000,
  "permlink": "lorem-ipsum-1",
}
`;

exports[`makeJsonMetaData (1)  1`] = `
Object {
  "app": "ecency/2.0.0-vision",
  "description": "",
  "format": "markdown+html",
  "image": Array [
    "http://www.xx.com/a.png",
    "https://img.esteem.ws/h74zrad2fh.jpg",
  ],
  "tags": Array [
    "esteem",
    "art",
  ],
}
`;

exports[`makeJsonMetadataReply (1) 1`] = `
Object {
  "app": "ecency/1.1-vision",
  "format": "markdown+html",
  "tags": Array [
    "foo",
    "bar",
  ],
}
`;
